; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bonding/extr_bond_main.c_bond_set_xmit_hash_policy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bonding/extr_bond_main.c_bond_set_xmit_hash_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bonding = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@bond_xmit_hash_policy_l23 = common dso_local global i32 0, align 4
@bond_xmit_hash_policy_l34 = common dso_local global i32 0, align 4
@bond_xmit_hash_policy_l2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bonding*)* @bond_set_xmit_hash_policy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bond_set_xmit_hash_policy(%struct.bonding* %0) #0 {
  %2 = alloca %struct.bonding*, align 8
  store %struct.bonding* %0, %struct.bonding** %2, align 8
  %3 = load %struct.bonding*, %struct.bonding** %2, align 8
  %4 = getelementptr inbounds %struct.bonding, %struct.bonding* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %16 [
    i32 129, label %7
    i32 128, label %11
    i32 130, label %15
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @bond_xmit_hash_policy_l23, align 4
  %9 = load %struct.bonding*, %struct.bonding** %2, align 8
  %10 = getelementptr inbounds %struct.bonding, %struct.bonding* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  br label %20

11:                                               ; preds = %1
  %12 = load i32, i32* @bond_xmit_hash_policy_l34, align 4
  %13 = load %struct.bonding*, %struct.bonding** %2, align 8
  %14 = getelementptr inbounds %struct.bonding, %struct.bonding* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  br label %20

15:                                               ; preds = %1
  br label %16

16:                                               ; preds = %1, %15
  %17 = load i32, i32* @bond_xmit_hash_policy_l2, align 4
  %18 = load %struct.bonding*, %struct.bonding** %2, align 8
  %19 = getelementptr inbounds %struct.bonding, %struct.bonding* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  br label %20

20:                                               ; preds = %16, %11, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
